tests/ui/lazy-type-alias/unconstrained-params-in-impl.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-params-in-impl.rs:4:6
   |
LL | impl<T> NotInjective<T> {}
   |      ^ unconstrained type parameter
   |
   = note: to constrain `T`, use it in the self type, or in an equality with an associated type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
